# SwitchHitter

./: .gitignore  Makefile  PROJECT_BRIEF.MD  V2_ARCHITECTURE_AUDIT.md  append_wallets.py  docker-compose.yml  fetch_all_borrowers.py  generate_wallets.js  generate_wallets.py  requirements.txt
backtester/: Dockerfile  main.py  requirements.txt  scavenger.py
collector/: Dockerfile  main.py
contracts/: SwitchHitter.sol  SwitchHitterV2.sol
contracts/interfaces/: IPool.sol  ISwapRouter.sol
dashboard/: Dockerfile  main.py  requirements.txt
db/: init.sql
docs/: data_model.md
engine/: Cargo.toml  Dockerfile  build_err.txt  build_logs.txt  err.txt
engine/src/: aggregator.rs  executor.rs  main.rs
enricher/: Dockerfile  main.py
executor/: main.py
historical_collector/: main.py  requirements.txt
quoter/: Dockerfile  main.py
rebounder/: main.py  requirements.txt
