[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls"] }
tokio = { version = "1.34", features = ["full"] }
dotenv = "0.15"
eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
